--- a/index.html
+++ b/index.html
@@ -62,24 +62,24 @@
         </div>
         <div class="carousel-mon" data-scrollable="data-scrollable">
           <div class="carousel__container d-flex justify-content-md-center" data-scrollable-inner="data-scrollable-inner" style="margin-top: -10px; bottom: -57px;"><a href="servicios.html">
-              <div class="carousel-item-mon"><img class="carousel-item__img" src="img/001_rev1.jpg" alt="projectproject 1"/>
-                <div class="carousel-item__details"><span class="badge badge-primary"><img class="carousel-item__details--img" src="img/001_rev1.jpg" alt="Play icon"/>
+              <div class="carousel-item-mon"><img class="carousel-item__img" src="img/005.jpg" alt="projectproject 1"/>
+                <div class="carousel-item__details"><span class="badge badge-primary"><img class="carousel-item__details--img" src="img/005.jpg" alt="Play icon"/>
                     <h6 class="carousel-item__details--title">Identidad Corporativa</h6></span>
                   <h3 class="carousel-p">Identidad Corporativa</h3>
                   <p class="carousel-item__details--subtitle">Crea con nosotros la imagen de tu marca</p>
                   <p class="carousel-item__details--button">Para saber más -></p>
                 </div>
               </div></a><a href="#">
-              <div class="carousel-item-mon"><img class="carousel-item__img" src="img/002_rev1.jpg" alt="projectproject 2"/>
-                <div class="carousel-item__details"><span class="badge badge-primary"><img class="carousel-item__details--img" src="img/002_rev1.jpg" alt="Play icon"/>
+              <div class="carousel-item-mon"><img class="carousel-item__img" src="img/004.jpg" alt="projectproject 2"/>
+                <div class="carousel-item__details"><span class="badge badge-primary"><img class="carousel-item__details--img" src="img/004.jpg" alt="Play icon"/>
                     <h6 class="carousel-item__details--title">Diseño user interface</h6></span>
                   <h3 class="carousel-p">Diseño user interface</h3>
                   <p class="carousel-item__details--subtitle">Crearemos el diseño de tu proximo website</p>
                   <p class="carousel-item__details--button">Para saber más -></p>
                 </div>
               </div></a><a href="#">
-              <div class="carousel-item-mon"><img class="carousel-item__img" src="img/003_rev1.jpg" alt="projectproject 3"/>
-                <div class="carousel-item__details"><span class="badge badge-primary"><img class="carousel-item__details--img" src="img/003_rev1.jpg" alt="Play icon"/>
+              <div class="carousel-item-mon"><img class="carousel-item__img" src="img/003.jpg" alt="projectproject 3"/>
+                <div class="carousel-item__details"><span class="badge badge-primary"><img class="carousel-item__details--img" src="img/003.jpg" alt="Play icon"/>
                     <h6 class="carousel-item__details--title">Paginas web</h6></span>
                   <h3 class="carousel-p">Paginas web</h3>
                   <p class="carousel-item__details--subtitle">Hagamos una pagina web increíble</p>
