--- a/servicios.html
+++ b/servicios.html
@@ -118,7 +118,7 @@
             <section class="box-explanation">
               <div class="boxes--fly">
                 <div class="boxes--fly-1">
-                  <div class="boxes__img--fly-1"></div>
+                  <div class="boxes__img--fly-1"><img src="img/001.png" alt="prueba"/></div>
                   <div class="boxes__text--fly-1">
                     <div class="boxes--text">
                       <h2>Tener un logo</h2>
@@ -133,14 +133,14 @@
                       <p>Es un documento que incluye los lineamiento gráficos, usos, aplicaciones y restricciones para la implementación de la marca.<br/>Esto le servirá a que si trabaja con otros diseñaores o programadores, puedan implementar correctamente la marca.</p>
                     </div>
                   </div>
-                  <div class="boxes__img--fly-2"></div>
+                  <div class="boxes__img--fly-2"><img src="img/002.png" alt="prueba"/></div>
                 </div>
                 <div class="boxes--fly-3">
                   <div class="boxes__text--fly-3">
-                    <div class="boxes--text">
+                    <div class="boxes--text order-2 order-sm-1">
                       <h2>Formatos de entrega son</h2>
                       <p>.psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf<br/>Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.</p>
-                    </div>
+                    </div><img class="order-1 order-sm-2" src="img/003.png" alt="prueba"/>
                   </div>
                 </div>
               </div>
@@ -228,10 +228,10 @@
                 </div>
                 <div class="boxes--fly-3">
                   <div class="boxes__text--fly-3">
-                    <div class="boxes--text">
+                    <div class="boxes--text order-2 order-sm-1">
                       <h2>Formatos de entrega son</h2>
                       <p>.psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf<br/>Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.</p>
-                    </div>
+                    </div><img class="order-1 order-sm-2" src="img/003.png" alt="prueba"/>
                   </div>
                 </div>
               </div>
@@ -319,10 +319,10 @@
                 </div>
                 <div class="boxes--fly-3">
                   <div class="boxes__text--fly-3">
-                    <div class="boxes--text">
+                    <div class="boxes--text order-2 order-sm-1">
                       <h2>Formatos de entrega son</h2>
                       <p>.psd, .ai, .pdf, .jpg, .png, .svg y entre otros. El manual se entregara en formato  .pdf<br/>Todos los elementos se  enviarán al correo electronico proporcionado por el cliente.</p>
-                    </div>
+                    </div><img class="order-1 order-sm-2" src="img/003.png" alt="prueba"/>
                   </div>
                 </div>
               </div>
